--- a/client-server/views/index.ejs
+++ b/client-server/views/index.ejs
@@ -478,7 +478,7 @@
                 </div>
                 <div class="form-group">
                   <label for="exampleInputPassword1">Senha</label>
-                  <input type="password" required class="form-control" id="exampleInputPassword" placeholder="Crie uma senha" name="password" autocomplete="on">
+                  <input type="password" required class="form-control" id="exampleInputPassword" placeholder="Crie uma senha" name="password" autocomplete="true">
                 </div>
                 <div class="form-group">
                   <label for="exampleInputFile">Foto</label>
@@ -774,12 +774,12 @@
                   </select>
                 </div>
                 <div class="form-group">
-                  <label for="exampleInputEmail1-update">E-mail</label>
+                  <label for="exampleInputEmail-update">E-mail</label>
                   <input type="email" required class="form-control" id="exampleInputEmail-update" placeholder="Digite o e-mail" name="email">
                 </div>
                 <div class="form-group">
-                  <label for="exampleInputPassword1-update">Senha</label>
-                  <input type="password" required class="form-control" id="exampleInputPassword-update" placeholder="Crie uma senha" name="password" autocomplete="on">
+                  <label for="exampleInputPassword-update">Senha</label>
+                  <input type="password" required class="form-control" id="exampleInputPassword-update" placeholder="Crie uma senha" name="password" autocomplete="true">
                 </div>
                 <div class="form-group">
                   <img src="dist/img/boxed-bg.jpg" class="photo" style="max-height: 128px;">
